RESOLVED FIXED294076
WebKit::WebPageProxy::willSubmitForm() does not call completionHandler() in early return
https://bugs.webkit.org/show_bug.cgi?id=294076
Summary WebKit::WebPageProxy::willSubmitForm() does not call completionHandler() in e...
David Kilzer (:ddkilzer)
Reported 2025-06-05 11:24:43 PDT
Summary: WebKit::WebPageProxy::willSubmitForm() does not call completionHandler() in early return.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-06-05 11:24:58 PDT
David Kilzer (:ddkilzer)
Comment 2 2025-06-05 11:27:47 PDT
EWS
Comment 3 2025-06-05 16:42:38 PDT
Committed 295896@main (180c505edf00): <https://commits.webkit.org/295896@main> Reviewed commits have been landed. Closing PR #46372 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.