WebKit::WebPageProxy::willSubmitForm() does not call completionHandler() in early return <https://bugs.webkit.org/show_bug.cgi?id=294076> <rdar://152666128>

Reviewed by Charlie Wolfe.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::willSubmitForm):
- Call completionHandler() in early return.
- Switch from MESSAGE_CHECK_BASE() to MESSAGE_CHECK_COMPLETION_BASE() to
  ensure completionHandler() is called on early return.

Canonical link: https://commits.webkit.org/295896@main